objects/HealthCloudGA__HealthCloudSetting__mdt.object
<CustomObject>
    <description>A generic dictionary for Health Cloud specific app configuration key value pairs.</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this config record should be used.</description>
        <inlineHelpText>Whether this config record should be used.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SettingName__c</fullName>
        <description>The name of this config setting. See documentation for the exact name of specific settings.</description>
        <inlineHelpText>The name of this config setting. See documentation for the exact name of specific settings.</inlineHelpText>
        <label>Setting Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SettingValue__c</fullName>
        <description>The value of this config setting. See documentation for recommended values and formats.</description>
        <inlineHelpText>The value of this config setting. See documentation for recommended values and formats.</inlineHelpText>
        <label>Setting Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Health Cloud Setting</label>
    <pluralLabel>Health Cloud Settings</pluralLabel>
</CustomObject>